--- a/frontend/templates/about/aboutGavin.html
+++ b/frontend/templates/about/aboutGavin.html
@@ -35,46 +35,6 @@
  </div>
 
 
-			
-	<div class="sidebar"><div class="signup shadow-box"><h2>Learn More</h2><p>Get the latest updates from Gavin Newsom.</p><form name="signup" class="bsd-signup-1" action="https://newsomlive.bsd.net/page/s/" method="post" id="sidebar-signup" novalidate >
-<input type="email" class="text"  id="email" name="email">
-  <span class="email-label">Email Address</span>
-  <input id="zip" name="zip" type="text">
-    <input type="submit" value="GO" class="button sidebar-signup" />
-<span class="email-label">Zip Code</span></form></div>
-	  <div class="donate shadow-box"><h2>Contribute</h2><p>Together we can make a difference for California's future. </p>
-
-<form onsubmit="genURL(); return false;">
-<table class="donate-miniform"><tr>
-<td class="dsign"><span style="font-size:32px;">$</span></td><td class="amt"><input type="text" id="user" class="donate-amount" onfocus="if(this.value == '15'){this.value = '';}" value="15" onblur="if(this.value == ''){this.value='15';}"/></td><td>
-<input type="submit" class="donate-button button" value="Donate Now" name="Submit" alt="Donate Now"/></td></tr>
-</table></form>
-
-<a href="../bitcoin/index.html" class="button small">Donate via BitCoin</a><a href="../monthly/index.html" class="button small">Donate Monthly</a></div>
-
-	  <div class="latest"><h2>Latest News</h2>
-
-
-        
-  
-<span class="pubdate">March 8, 2015</span>
-<span class="title"><a href="../2015/03/08/be-man/index.html" style="font-weight:bold;">&quot;Be a man!&quot;</a></span>
-
-<span class="pubdate">February 11, 2015</span>
-<span class="title"><a href="http://www.huffingtonpost.com/2015/02/11/gavin-newsom-governor_n_6662504.html" style="font-weight:bold;">Huffington Post: Gavin Newsom Takes First Step Toward Running For California Governor</a></span>
-
-<span class="pubdate">February 11, 2015</span>
-<span class="title"><a href="http://ww2.kqed.org/news/2015/02/11/gavin-newsom-says-hes-running-for-California-governor-in-2018/" style="font-weight:bold;">KQED: Yes, Says Gavin Newsom: I’m Running for Governor</a></span>
-
-<span class="pubdate">February 11, 2015</span>
-<span class="title"><a href="http://www.sacbee.com/news/politics-government/capitol-alert/article9735230.html" style="font-weight:bold;">Sacramento Bee: Gavin Newsom to open campaign account for governor in 2018</a></span>
-
-<span class="pubdate">February 11, 2015</span>
-<span class="title"><a href="../2015/02/11/join-us/index.html" style="font-weight:bold;">Join us</a></span>
-
-<p><a href="../latest-news/index.html" class="latest">Read more news.</a></p></div>
-
-
-	</div>
+			<div ng-include=" './templates/sidebar.html' "></div>
 	
 	</div>
