--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -28,25 +28,25 @@
                 </div>
               </li>
               <li>
-                <a href="latest-news/index.html">Latest</a>
+                <a ui-sref="latest-news">Latest</a>
               </li>
               <li>
-                <a href="issues/index.html">Issues</a>
+                <a ui-sref="issues">Issues</a>
               </li>
               <li class="dropdown">
-                <a href="get-involved/index.html" class="dropbtn">Get Involved</a>
+                <a ui-sref="get-involved/index.html" class="dropbtn">Get Involved</a>
                 <div class="dropdown-content">
-                  <a href="endorse/index.html">Endorse Gavin</a>
-                  <a href="facebook/index.html">Join us on Facebook</a>
-                  <a href="donate/index.html">Make a Donation</a>
-                  <a href="volunteer/index.html">Volunteer</a>
+                  <a ui-sref="endorse/index.html">Endorse Gavin</a>
+                  <a ui-sref="facebook/index.html">Join us on Facebook</a>
+                  <a ui-sref="donate/index.html">Make a Donation</a>
+                  <a ui-sref="volunteer/index.html">Volunteer</a>
                 </div>
               </li>
               <li>
-                <a href="contact/index.html">Contact</a>
+                <a ui-sref="contact/index.html">Contact</a>
               </li>
               <li class="last">
-                <a href="donate/index.html" class style="z-index: 7;">Donate</a>
+                <a ui-sref="donate/index.html" class style="z-index: 7;">Donate</a>
               </li>
           </ul>
         </div>
