updates more views, includes bug fixes

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -7,21 +7,8 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
  -->
- 
-  <div class="signup shadow-box"><h2>Learn More</h2><p>Get the latest updates from Gavin Newsom.</p><form name="signup" class="bsd-signup-1" action="https://newsomlive.bsd.net/page/s/" method="post" id="sidebar-signup" novalidate >
-  <input type="email" class="text"  id="email" name="email">
-    <span class="email-label">Email Address</span>
-    <input id="zip" name="zip" type="text">
-      <input type="submit" value="GO" class="button sidebar-signup" />
-  <span class="email-label">Zip Code</span></form></div>
-      <div class="donate shadow-box"><h2>Contribute</h2><p>Together we can make a difference for California's future. </p>
 
-  <form onsubmit="genURL(); return false;">
-  <table class="donate-miniform"><tr>
-  <td class="dsign"><span style="font-size:32px;">$</span></td><td class="amt"><input type="text" id="user" class="donate-amount" onfocus="if(this.value == '15'){this.value = '';}" value="15" onblur="if(this.value == ''){this.value='15';}"/></td><td>
-  <input type="submit" class="donate-button button" value="Donate Now" name="Submit" alt="Donate Now"/></td></tr>
-  </table></form>
-  </div>
+<div ng-include=" './templates/sidebar.html' "></div>
 
 
   <div class="cycle-slideshow"
@@ -39,7 +26,7 @@
 	    </div>
     </div>
         
-    <div style="background:url(media/uploads/slide1bg.jpg) 50% 0% no-repeat;" >
+<!--     <div style="background:url(media/uploads/slide1bg.jpg) 50% 0% no-repeat;" >
       <div class="slide">
 		    <a href="about/index.html">
           <img src="media/uploads/slideshow_images/meetgavin1.png" alt="slide1" />
@@ -78,12 +65,13 @@
         </a>
       </div>  
     </div>    
-  </div>
+ -->  </div>
 
   <div id="custom-pager-wrapper">
     <div id="custom-pager">
     </div>
   </div>
+
 
 	
 	<div class="home-content-wrapper">
