--- a/frontend/media/css/custom.css
+++ b/frontend/media/css/custom.css
@@ -51,6 +51,10 @@ img.left {
 	display: inline-block;
 }
 
+.site_links ul li a {
+	text-decoration: none;
+}
+
 .print_header {
 	display:none;
 }
@@ -84,6 +88,7 @@ img.left {
     background-color: #19273E;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:100;
 }
 
 /* Links inside the dropdown */
@@ -106,7 +111,7 @@ img.left {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-  background-color: #F5CC3A;
+  background-color: #19273E;
   text-decoration: none;  
 }
 
@@ -123,6 +128,7 @@ img.left {
 }
 
 div.logo {
+	margin-left: 10%;
 	width:276px;
 	float:left;
 	height:120px;
@@ -318,11 +324,13 @@ span.req {
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
+	z-index: 0;
 }
 
 
 .sidebar .shadow-box {
 	padding:15px;
+	z-index: 0;
 }
 
 .footer-wrapper {
@@ -437,9 +445,11 @@ td.heading {
 
 div.site_links {
   width:684px;
-  float:right;
+  float:left;
+	margin-right: 10%;
   padding-top:60px;
   display: inline;
+	/*margin: 0 auto;*/
  }
 
 .site_links ul {
