--- a/frontend/templates/footer.html
+++ b/frontend/templates/footer.html
@@ -1,3 +1,14 @@
+  <div class="megafooter-wrapper"><div class="centered"><div class="connect"><h2>Connect with Gavin</h2>
+  <table>
+    <tr><td class="heading"><a href="../facebook/index.html">CONNECT ON FACEBOOK</a></td><td><div class="fb-like" data-href="https://www.facebook.com/GavinNewsom" data-width="310" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div></td></tr>
+    <tr><td class="heading"><a href="../twitter/index.html">CONNECT ON TWITTER</a></td><td><a href="https://twitter.com/gavinnewsom" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gavinnewsom</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></td></tr>
+    <tr><td class="heading"><a href="../flipboard/index.html">CONNECT ON FLIPBOARD</a></td><td><a data-flip-widget="pro" href="http://flipboard.com/profile/GavinNewsom" style="float:left;margin-right:10px;">Gavin Newsom</a><script src="https://cdn.flipboard.com/web/buttons/js/flbuttons.min.js" type="text/javascript"></script><a href="../flipboard/index.html" style="position:relative;top:5px;">Use Flipboard to read good stuff that Gavin's reading this week.</a></td></tr>
+    <tr><td class="heading"><a href="../citizenville/index.html">CHECK OUT CITIZENVILLE</a></td><td><a href="../citizenville/index.html"><img src="../media/images/citizenville.png" alt="Citizenville" style="float:left;margin-right:10px;" /></a><a href="../citizenville/index.html"><em>Citizenville</em>, by Gavin Newsom, is the story of how ordinary citizens can use new digital tools to dissolve political gridlock and transform American democracy.</td></tr>
+    </table>
+  </div></div></div>
+
+
           <a name="mobile-nav"></a>
           <div class="megafooter-nav-wrapper">
             <div class="megafooter-nav centered">
