--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -34,12 +34,12 @@
                 <a ui-sref="issues">Issues</a>
               </li>
               <li class="dropdown">
-                <a ui-sref="get-involved/index.html" class="dropbtn">Get Involved</a>
+                <a ui-sref="get-involved" class="dropbtn">Get Involved</a>
                 <div class="dropdown-content">
-                  <a ui-sref="endorse/index.html">Endorse Gavin</a>
-                  <a ui-sref="facebook/index.html">Join us on Facebook</a>
-                  <a ui-sref="donate/index.html">Make a Donation</a>
-                  <a ui-sref="volunteer/index.html">Volunteer</a>
+                  <a ui-sref="endorse" class="dropbtn">Endorse Gavin</a>
+                  <a href="https://www.facebook.com/GavinNewsom" class="dropbtn">Join us on Facebook</a>
+                  <a href="https://secure.actblue.com/contribute/page/newsomdonate?refcode=www" class="dropbtn">Make a Donation</a>
+                  <a ui-sref="volunteer" class="dropbtn">Volunteer</a>
                 </div>
               </li>
               <li>
