FIXES THE RELOAD ISSUE! States persist on reload

--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -18,36 +18,36 @@
 
       <div class="site_links">
           <ul>
-              <li>
-                <a ui-sref="app">Home</a>
-              </li>
-              <li class="dropdown">
-                <a ui-sref="aboutGavin" class="dropbtn">About Gavin</a>
-                <div class="dropdown-content">
-                  <a ui-sref="aboutJennifer" class="dropbtn">About Jennifer</a>
-                </div>
-              </li>
-              <li>
-                <a ui-sref="latest-news">Latest</a>
-              </li>
-              <li>
-                <a ui-sref="issues">Issues</a>
-              </li>
-              <li class="dropdown">
-                <a ui-sref="get-involved" class="dropbtn">Get Involved</a>
-                <div class="dropdown-content">
-                  <a ui-sref="endorse" class="dropbtn">Endorse Gavin</a>
-                  <a href="https://www.facebook.com/GavinNewsom" class="dropbtn">Join us on Facebook</a>
-                  <a href="https://secure.actblue.com/contribute/page/newsomdonate?refcode=www" class="dropbtn">Make a Donation</a>
-                  <a ui-sref="volunteer" class="dropbtn">Volunteer</a>
-                </div>
-              </li>
-              <li>
-                <a ui-sref="contact/index.html">Contact</a>
-              </li>
-              <li class="last">
-                <a ui-sref="donate/index.html" class style="z-index: 7;">Donate</a>
-              </li>
+            <li>
+              <a ui-sref="app">Home</a>
+            </li>
+            <li class="dropdown">
+              <a ui-sref="aboutGavin" class="dropbtn">About Gavin</a>
+              <div class="dropdown-content">
+                <a ui-sref="aboutJennifer" class="dropbtn">About Jennifer</a>
+              </div>
+            </li>
+            <li>
+              <a ui-sref="latest-news">Latest</a>
+            </li>
+            <li>
+              <a ui-sref="issues">Issues</a>
+            </li>
+            <li class="dropdown">
+              <a ui-sref="get-involved" class="dropbtn">Get Involved</a>
+              <div class="dropdown-content">
+                <a ui-sref="endorse" class="dropbtn">Endorse Gavin</a>
+                <a href="https://www.facebook.com/GavinNewsom" class="dropbtn">Join us on Facebook</a>
+                <a href="https://secure.actblue.com/contribute/page/newsomdonate?refcode=www" class="dropbtn">Make a Donation</a>
+                <a ui-sref="volunteer" class="dropbtn">Volunteer</a>
+              </div>
+            </li>
+            <li>
+              <a ui-sref="contact/index.html">Contact</a>
+            </li>
+            <li class="last">
+              <a href="https://secure.actblue.com/contribute/page/newsomdonate?refcode=www">Donate</a>
+            </li>
           </ul>
         </div>
       </div>
