--- a/frontend/templates/volunteer.html
+++ b/frontend/templates/volunteer.html
@@ -21,8 +21,24 @@
         <div class="input"><input type="tel" class="text" size="15" id="phone" name="phone"></div>
 </div>
 <div class="options">
-<p><strong>How do you want to be involved?</strong><br /><em>Check all that apply</em></p>
-        <div class="input"><input id="custom-169_0" class="custom-169" name="__custom-169[0]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[0]&#039;].value=&#039;Host a house party&#039;; }else { this.form[&#039;custom-169[0]&#039;].value=&#039;&#039;; } "><label for="custom-169_0">Host a house party<br></label><input type="hidden" name="custom-169[0]" value=""><input id="custom-169_1" class="custom-169" name="__custom-169[1]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[1]&#039;].value=&#039;Volunteer in a campaign office&#039;; }else { this.form[&#039;custom-169[1]&#039;].value=&#039;&#039;; } "><label for="custom-169_1">Volunteer in a campaign office<br></label><input type="hidden" name="custom-169[1]" value=""><input id="custom-169_2" class="custom-169" name="__custom-169[2]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[2]&#039;].value=&#039;Sign petitions on important issues&#039;; }else { this.form[&#039;custom-169[2]&#039;].value=&#039;&#039;; } "><label for="custom-169_2">Sign petitions on important issues<br></label><input type="hidden" name="custom-169[2]" value=""><input id="custom-169_3" class="custom-169" name="__custom-169[3]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[3]&#039;].value=&#039;Make phone calls&#039;; }else { this.form[&#039;custom-169[3]&#039;].value=&#039;&#039;; } "><label for="custom-169_3">Make phone calls<br></label><input type="hidden" name="custom-169[3]" value=""><input id="custom-169_4" class="custom-169" name="__custom-169[4]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[4]&#039;].value=&#039;Knock on doors&#039;; }else { this.form[&#039;custom-169[4]&#039;].value=&#039;&#039;; } "><label for="custom-169_4">Knock on doors<br></label><input type="hidden" name="custom-169[4]" value=""></div>
+	<p><strong>How do you want to be involved?</strong><br /><em>Check all that apply</em></p>
+	<div class="input">
+		<input id="custom-169_0" class="custom-169" name="__custom-169[0]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[0]&#039;].value=&#039;Host a house party&#039;; }else { this.form[&#039;custom-169[0]&#039;].value=&#039;&#039;; } ">
+		<label for="custom-169_0">Host a house party<br></label>
+		<input type="hidden" name="custom-169[0]" value="">
+		<input id="custom-169_1" class="custom-169" name="__custom-169[1]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[1]&#039;].value=&#039;Volunteer in a campaign office&#039;; }else { this.form[&#039;custom-169[1]&#039;].value=&#039;&#039;; } ">
+		<label for="custom-169_1">Volunteer in a campaign office<br></label>
+		<input type="hidden" name="custom-169[1]" value="">
+		<input id="custom-169_2" class="custom-169" name="__custom-169[2]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[2]&#039;].value=&#039;Sign petitions on important issues&#039;; }else { this.form[&#039;custom-169[2]&#039;].value=&#039;&#039;; } ">
+		<label for="custom-169_2">Sign petitions on important issues<br></label>
+		<input type="hidden" name="custom-169[2]" value="">
+		<input id="custom-169_3" class="custom-169" name="__custom-169[3]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[3]&#039;].value=&#039;Make phone calls&#039;; }else { this.form[&#039;custom-169[3]&#039;].value=&#039;&#039;; } ">
+		<label for="custom-169_3">Make phone calls<br></label>
+		<input type="hidden" name="custom-169[3]" value="">
+		<input id="custom-169_4" class="custom-169" name="__custom-169[4]" type="checkbox" value="1" onclick="if (this.checked) { this.form[&#039;custom-169[4]&#039;].value=&#039;Knock on doors&#039;; }else { this.form[&#039;custom-169[4]&#039;].value=&#039;&#039;; } ">
+		<label for="custom-169_4">Knock on doors<br></label>
+		<input type="hidden" name="custom-169[4]" value="">
+	</div>
 </div>
 <input type="submit" value="Count Me In!" class="button" />
 
