--- a/frontend/media/css/custom.css
+++ b/frontend/media/css/custom.css
@@ -45,8 +45,8 @@ img.left {
 .header { 
 	width:100%;
 	margin:0px auto;
-	height:120px;
-	padding:10px 0px;
+	height:140px;
+	padding:0px;
 	/*text-align: center;*/
 	display: inline-block;
 }
@@ -85,7 +85,7 @@ img.left {
 		text-decoration: none; 
     display: none;
     position: absolute;
-    background-color: #19273E;
+    background-color: #F5CC3A !important;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index:100;
@@ -101,7 +101,7 @@ img.left {
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-	background-color: #F5CC3A;
+	background-color: #F5CC3A !important;
 }
 
 /* Show the dropdown menu on hover */
@@ -111,7 +111,6 @@ img.left {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-  background-color: #19273E;
   text-decoration: none;  
 }
 
