builds out links

--- a/frontend/templates/getInvolved.html
+++ b/frontend/templates/getInvolved.html
@@ -12,10 +12,7 @@
 
 
 
-<div class="share_links"><span class='st_sharethis' st_via='' displayText='ShareThis'></span>
-<span class='st_facebook' displayText='Facebook'></span>
-<span class='st_twitter' displayText='Tweet'></span>
-<span class='st_email' displayText='Email'></span></div>
+<div ng-include=" './templates/shareLinks.html' "></div>
 
  </div>
 
