--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -43,7 +43,7 @@
               </div>
             </li>
             <li>
-              <a ui-sref="contact/index.html">Contact</a>
+              <a href="https://newsomlive.bsd.net/page/s/contact-us">Contact</a>
             </li>
             <li class="last">
               <a href="https://secure.actblue.com/contribute/page/newsomdonate?refcode=www">Donate</a>
