--- a/frontend/templates/issues.html
+++ b/frontend/templates/issues.html
@@ -2,12 +2,12 @@
 <div class="wrapper"><div class="main_content"><div class="header_title"><h1>Key Issues</h1></div>
   <p>Find out what Lt. Gov. Gavin Newsom has been working on for California:</p>
 <ul>
-<li><a href="economy/index.html">Economy and jobs</a> </li>
-<li><a href="energy/index.html">A clean energy future</a> </li>
-<li><a href="civil-rights/index.html">Standing up for all Californians</a> </li>
-<li><a href="schools/index.html">Building stronger schools at all levels</a> </li>
-<li><a href="drugpolicy/index.html">Rethinking our drug policy</a> </li>
-<li><a href="government/index.html">Making government work better</a> </li>
+<li><a ui-sref="economy">Economy and jobs</a> </li>
+<li><a ui-sref="energy">A clean energy future</a> </li>
+<li><a ui-sref="civilRights">Standing up for all Californians</a> </li>
+<li><a ui-sref="schools">Building stronger schools at all levels</a> </li>
+<li><a ui-sref="drugPolicy">Rethinking our drug policy</a> </li>
+<li><a ui-sref="government">Making government work better</a> </li>
 </ul>
 
 	<div class="clear">&nbsp;</div>
@@ -22,6 +22,8 @@
  </div>
 
 <div ng-include=" './templates/sidebar.html' "></div>
+<!-- <div ng-include=" './templates/newsWithSidebar.html' "></div> -->
+
 
 </div>
 			
