--- a/frontend/templates/sidebar.html
+++ b/frontend/templates/sidebar.html
@@ -31,7 +31,10 @@
 		
 		<a href="../bitcoin/index.html" class="button small">Donate via BitCoin</a>
 		<a href="../monthly/index.html" class="button small">Donate Monthly</a>
+
 	</div>
+
+
 
 	<div class="latest">
 		<h2>Latest News</h2>
@@ -41,7 +44,7 @@
   
 		<span class="pubdate">March 8, 2015</span>
 		<span class="title">
-			<a href="../2015/03/08/be-man/index.html" style="font-weight:bold;">&quot;Be a man!&quot;</a>
+			<a ui-sref="be-a-man" style="font-weight:bold;">&quot;Be a man!&quot;</a>
 		</span>
 
 		<span class="pubdate">February 11, 2015</span>
@@ -61,12 +64,10 @@
 
 		<span class="pubdate">February 11, 2015</span>
 		<span class="title">
-			<a href="../2015/02/11/join-us/index.html" style="font-weight:bold;">Join us</a>
+			<a ui-sref="join-us" style="font-weight:bold;">Join us</a>
 		</span>
 
 		<p>
 			<a href="../latest-news/index.html" class="latest">Read more news.</a>
 		</p>
 	</div>
-
-</div>
