--- a/frontend/templates/about/aboutGavin.html
+++ b/frontend/templates/about/aboutGavin.html
@@ -27,14 +27,14 @@
 
 
 
-<div class="share_links"><span class='st_sharethis' st_via='' displayText='ShareThis'></span>
-<span class='st_facebook' displayText='Facebook'></span>
-<span class='st_twitter' displayText='Tweet'></span>
-<span class='st_email' displayText='Email'></span></div>
+<div ng-include=" './templates/shareLinks.html' "></div>
+
 
  </div>
 
 
 			<div ng-include=" './templates/sidebar.html' "></div>
+			<!-- <div ng-include=" './templates/newsWithSidebar.html' "></div> -->
+
 	
 	</div>
