--- a/frontend/templates/footer.html
+++ b/frontend/templates/footer.html
@@ -1,66 +1,125 @@
-  <div class="megafooter-wrapper"><div class="centered"><div class="connect"><h2>Connect with Gavin</h2>
-  <table>
-    <tr><td class="heading"><a href="../facebook/index.html">CONNECT ON FACEBOOK</a></td><td><div class="fb-like" data-href="https://www.facebook.com/GavinNewsom" data-width="310" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div></td></tr>
-    <tr><td class="heading"><a href="../twitter/index.html">CONNECT ON TWITTER</a></td><td><a href="https://twitter.com/gavinnewsom" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @gavinnewsom</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></td></tr>
-    <tr><td class="heading"><a href="../flipboard/index.html">CONNECT ON FLIPBOARD</a></td><td><a data-flip-widget="pro" href="http://flipboard.com/profile/GavinNewsom" style="float:left;margin-right:10px;">Gavin Newsom</a><script src="https://cdn.flipboard.com/web/buttons/js/flbuttons.min.js" type="text/javascript"></script><a href="../flipboard/index.html" style="position:relative;top:5px;">Use Flipboard to read good stuff that Gavin's reading this week.</a></td></tr>
-    <tr><td class="heading"><a href="../citizenville/index.html">CHECK OUT CITIZENVILLE</a></td><td><a href="../citizenville/index.html"><img src="../media/images/citizenville.png" alt="Citizenville" style="float:left;margin-right:10px;" /></a><a href="../citizenville/index.html"><em>Citizenville</em>, by Gavin Newsom, is the story of how ordinary citizens can use new digital tools to dissolve political gridlock and transform American democracy.</td></tr>
-    </table>
-  </div></div></div>
+<div class="megafooter-wrapper">
+  <div class="centered">
+    <div class="connect">
+      <h2>Connect with Gavin</h2>
+      <table>
+        <tr>
+          <td class="heading">
+            <a href="../facebook/index.html">CONNECT ON FACEBOOK</a>
+          </td>
+          <td>
+            <div class="fb-like" data-href="https://www.facebook.com/GavinNewsom" data-width="310" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="heading">
+            <a href="../twitter/index.html">CONNECT ON TWITTER</a>
+          </td>
+          <td>     
+            <a href="https://twitter.com/gavinnewsom" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @gavinnewsom</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="heading">
+            <a href="../flipboard/index.html">CONNECT ON FLIPBOARD</a>
+          </td>
+          <td>
+          <a href="https://flipboard.com/@GavinNewsom?utm_campaign=widgets&utm_medium=web&utm_source=profile_badge&utm_content=gavinnewsom.com?utm_campaign=widgets&utm_source=logo&utm_medium=web"><img src="http://cdn.flipboard.com/badges/flipboard_srsw.png" alt="Flipboard" /></a>
+<!--             <a data-flip-widget="pro" href="http://flipboard.com/profile/GavinNewsom?utm_campaign=widgets&amp;utm_medium=web&amp;utm_source=profile_badge&amp;utm_content=gavinnewsom.com" style="float:left;margin-right:10px;" class="fl_profile_button" target="_blank">Gavin Newsom<i></i><b></b></a>
+            <script src="https://cdn.flipboard.com/web/buttons/js/flbuttons.min.js" type="text/javascript"></script> -->
+            <a href="../flipboard/index.html" style="position:relative;bottom:9px;">Use Flipboard to read good stuff that Gavin's reading this week.</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="heading">
+            <a href="../citizenville/index.html">CHECK OUT CITIZENVILLE</a>
+          </td>
+          <td>
+            <a href="../citizenville/index.html"><img src="../media/images/citizenville.png" alt="Citizenville" style="float:left;margin-right:10px;" /></a>
+            <a href="../citizenville/index.html"><em>Citizenville</em>, by Gavin Newsom, is the story of how ordinary citizens can use new digital tools to dissolve political gridlock and transform American democracy.
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
 
 
-          <a name="mobile-nav"></a>
-          <div class="megafooter-nav-wrapper">
-            <div class="megafooter-nav centered">
+<a name="mobile-nav"></a>
+<div class="megafooter-nav-wrapper">
+  <div class="megafooter-nav centered">
 
-              <ul>
-                <li>
-                  <strong><a href="about/index.html">About Gavin</a></strong>
-                </li>
-                <li><a href="about/index.html">Meet Gavin</a></li>
-                <li><a href="about/jennifer/index.html">Meet Jennifer</a></li>
-              </ul>
-              <ul class="issues"><li><strong><a href="issues/index.html">Issues</a></strong></li>
-                <li><a href="issues/economy/index.html">Economy and jobs</a></li>
-                <li><a href="issues/energy/index.html">A clean energy future</a></li>
-                <li><a href="issues/civil-rights/index.html">Standing up for all Californians</a></li>
-                <li><a href="issues/schools/index.html">Building stronger schools at all levels</a></li>
-                <li><a href="issues/government/index.html">Making government work better</a></li>
-              </ul>
-              <ul>
-                <li><strong><a href="latest-news/index.html">Latest News</a></strong></li>
-                <li><a href="category/press-releases/index.html">Press Releases</a></li>
-                <li><a href="news/index.html">In the News</a></li>
-              </ul>
-              <ul>
-                <li><strong><a href="get-involved/index.html">Get Involved</a></strong></li>
-                <li><a href="donate/index.html">Donate</a></li>
-  <!--<li>Volunteer</li>-->
-                <li><a href="register/index.html">Register to Vote</a></li>
-              </ul>
-              <ul class="contact">
-                <li><strong><a href="contact/index.html">Contact</a></strong></li>
-                <li>Warren & Associates<br />
-                    20 Galli Drive<br />
-                    Suite A<br />
-                    Novato, CA  94949<br />
-                    <!-- Phone: (415) 963-9240  --><br />
-                </li>
-              </ul>
-              <ul>
-                <li><strong>Connect</strong></li>
-                <li>
-                  <a href="facebook/index.html"><img src="media/images/facebookicon.png" alt="Facebook" /></a>
-                  <a href="twitter/index.html"><img src="media/images/twittericon.png" alt="Twitter" /></a>
-                  <a href="youtube/index.html"><img src="media/images/yticon.png" alt="YouTube" /></a>
-                  <a href="flipboard/index.html"><img src="media/images/flipboardicon.png" alt="FlipBoard" /></a>
-                </li>
-              </ul>
-            </div>
-          </div>
+    <ul>
+      <li>
+        <strong><a ui-sref="aboutGavin">About Gavin</a></strong>
+      </li>
+      <li><a ui-sref="aboutGavin">Meet Gavin</a></li>
+      <li><a ui-sref="aboutJennifer">Meet Jennifer</a></li>
+    </ul>
+    <ul class="issues">
+      <li>
+        <strong><a ui-sref="issues">Issues</a></strong>
+      </li>
+      <li>
+        <a ui-sref="economy">Economy and jobs</a>
+      </li>
+      <li>
+        <a ui-sref="energy">A clean energy future</a>
+      </li>
+      <li><a ui-sref="civilRights">Standing up for all Californians</a></li>
+      <li><a ui-sref="schools">Building stronger schools at all levels</a></li>
+      <li><a ui-sref="government">Making government work better</a></li>
+    </ul>
+    <ul>
+      <li>
+        <strong><a ui-sref="latest-news">Latest News</a></strong>
+      </li>
+      <li>
+        <a ui-sref="press-releases">Press Releases</a>
+      </li>
+      <li>
+        <a ui-sref="latest-news">In the News</a>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <strong><a ui-sref="get-involved">Get Involved</a></strong>
+      </li>
+      <li>
+        <a href="https://secure.actblue.com/contribute/page/newsomdonate?refcode=www">Donate</a>
+      </li>
+<!--<li>Volunteer</li>-->
+      <li><a ui-sref="register">Register to Vote</a></li>
+    </ul>
+    <ul class="contact">
+      <li>
+        <strong><a href="https://newsomlive.bsd.net/page/s/contact-us">Contact</a></strong>
+      </li>
+      <li>Warren & Associates<br />
+          20 Galli Drive<br />
+          Suite A<br />
+          Novato, CA  94949<br />
+          <!-- Phone: (415) 963-9240  --><br />
+      </li>
+    </ul>
+    <ul>
+      <li><strong>Connect</strong></li>
+      <li>
+        <a href="https://www.facebook.com/GavinNewsom"><img src="media/images/facebookicon.png" alt="Facebook" /></a>
+        <a href="https://twitter.com/GavinNewsom"><img src="media/images/twittericon.png" alt="Twitter" /></a>
+        <a href="https://www.youtube.com/user/NewsomforCalifornia?&ab_channel=NewsomforCalifornia"><img src="media/images/yticon.png" alt="YouTube" /></a>
+        <a href="https://flipboard.com/@GavinNewsom"><img src="media/images/flipboardicon.png" alt="FlipBoard" /></a>
+      </li>
+    </ul>
+  </div>
+</div>
 
-          <div class="footer-wrapper">
-            <div class="footer centered">
-              <span class="copy">&copy; 2015 Newsom for California</span>
-              <span class="disclaimer">Paid for by Newsom for California - Governor 2018.</span>
-              <span class="powered"><a href="privacy-policy/index.html">Privacy Policy</a></span>
+<div class="footer-wrapper">
+  <div class="footer centered">
+    <span class="copy">&copy; 2015 Newsom for California</span>
+    <span class="disclaimer">Paid for by Newsom for California - Governor 2018.</span>
+    <span class="powered">
+      <a href="privacy-policy/index.html">Privacy Policy</a>
+    </span>
+  </div>
+</div>
