--- a/frontend/templates/volunteer.html
+++ b/frontend/templates/volunteer.html
@@ -1,5 +1,6 @@
 
-<div class="wrapper"><div class="main_content"><div class="header_title"><h1>Sign up to Volunteer!</h1></div>
+<div class="wrapper">
+<div class="main_content"><div class="header_title"><h1>Sign up to Volunteer!</h1></div>
   <p>The campaign is just getting started, and we’re building a team that’s ready for the challenges that lie ahead.</p>
 <p>It’s the power of individual support from all across California that will keep us one step ahead. Add your name to our list of volunteers and we’ll keep you posted about ways to get involved in your area.</p>
 <p>There’s no such thing as “too early” to build a grassroots movement.  Join us today!</p>
@@ -50,12 +51,13 @@
 
 
 
-<div class="share_links"><span class='st_sharethis' st_via='' displayText='ShareThis'></span>
-<span class='st_facebook' displayText='Facebook'></span>
-<span class='st_twitter' displayText='Tweet'></span>
-<span class='st_email' displayText='Email'></span></div>
+<div ng-include=" './templates/shareLinks.html' "></div>
 
-<div ng-include=" './templates/sidebar.html' "></div>
+
 
 
  </div>
+<div ng-include=" './templates/sidebar.html' "></div>
+
+<!-- <div ng-include=" './templates/newsWithSidebar.html' "></div> -->
+</div>
